--- a/drivers/platform/Kconfig
+++ b/drivers/platform/Kconfig
@@ -6,6 +6,10 @@ if MIPS
 source "drivers/platform/mips/Kconfig"
 endif
 
+if ARM
+source "drivers/platform/nintendo3ds/Kconfig"
+endif
+
 source "drivers/platform/goldfish/Kconfig"
 
 source "drivers/platform/chrome/Kconfig"
